production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-production-service
  namespace: production
spec:
  selector:
    app: springboot
    env: prod
  ports:
  - port: 8080  # External port exposed by the service
    targetPort: 8080
